# math

./: .clang-format  .gdb_history  .git-blame-ignore-revs  .gitattributes  .gitignore  .travis.yml  2  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Jenkinsfile  Jenkinsfile_disabled  LICENSE.md  MPI_NOTES  README.md  RELEASE-NOTES.txt  TMP-TEST.txt  _c_o_n_t_r_i_b_u_t_i_n_g_8md.html  _eigen_8dox.html  _eigen_8hpp.html  _eigen_8hpp_a9cb1dd38c432369c34dfc4a0d9a69bf3.html  _eigen_8hpp_afc792de073c9a00a2f3739a451be4312.html  _eigen_8hpp_source.html  _r_e_a_d_m_e_8md.html  _std_vector_builder_8hpp.html  _std_vector_builder_8hpp_source.html  _vector_builder_8hpp.html  _vector_builder_8hpp_source.html  _vector_builder_helper_8hpp.html  _vector_builder_helper_8hpp_source.html  a1.txt  accumulate__adjoints_8hpp.html  accumulate__adjoints_8hpp_source.html  ad__promotable_8hpp.html  ad__promotable_8hpp_source.html  add__new__opencl__kernel_8md.html  adding__new__distributions_8md.html  adjoint__of_8hpp.html  adjoint__of_8hpp_source.html  adjoint__results_8hpp.html  (+13985 more)
cmake/: CMakeLists.txt  StanMathConfig.cmake.in
lib/opencl_2.0.15/: .gitmodules  .travis.yml  CMakeLists.txt  README.md
lib/opencl_2.0.15/docs/: CMakeLists.txt  Doxyfile.in
lib/opencl_2.0.15/examples/: CMakeLists.txt
lib/opencl_2.0.15/include/: CMakeLists.txt
lib/opencl_2.0.15/tests/: CMakeLists.txt  ToAdd.txt  cmock.yml  strip_defines.py  test_openclhpp.cpp
lib/sundials_4.0.2/src/: CMakeLists.txt
lib/sundials_4.1.0/examples/: CMakeLists.txt
lib/sundials_4.1.0/src/: CMakeLists.txt
lib/sundials_5.2.0/: CMakeLists.txt  README.md
lib/sundials_5.2.0/config/: FindPETSC.cmake  FindSUPERLUMT.cmake  FindTrilinos.cmake  SundialsAddF2003InterfaceLibrary.cmake  SundialsAddTest.cmake  SundialsCXX.cmake  SundialsCudaArchGeq.cmake  SundialsFortran.cmake  SundialsHypre.cmake  SundialsIndexSize.cmake  SundialsLapack.cmake  SundialsMPI.cmake  SundialsPETSC.cmake  SundialsPOSIXTimers.cmake  SundialsSuperLUDIST.cmake  SundialsSuperLUMT.cmake  SundialsTesting.cmake  SundialsTrilinos.cmake  SundialsXSDK.cmake
lib/sundials_5.2.0/examples/: CMakeLists.txt
lib/sundials_5.2.0/src/: CMakeLists.txt
lib/sundials_5.7.0/: CMakeLists.txt  README.md
lib/sundials_5.7.0/cmake/: SUNDIALSConfig.cmake.in  SundialsBuildOptionsPost.cmake  SundialsBuildOptionsPre.cmake  SundialsDeprecated.cmake  SundialsExampleOptions.cmake  SundialsIndexSize.cmake  SundialsSetupCXX.cmake  SundialsSetupCompilers.cmake  SundialsSetupConfig.cmake  SundialsSetupCuda.cmake  SundialsSetupFortran.cmake  SundialsSetupHIP.cmake  SundialsSetupTPLs.cmake  SundialsTPLOptions.cmake
lib/sundials_5.7.0/examples/: CMakeLists.txt
lib/sundials_5.7.0/src/: CMakeLists.txt
lib/sundials_6.1.1/benchmarks/: CMakeLists.txt
lib/sundials_6.1.1/examples/: CMakeLists.txt
lib/sundials_6.1.1/src/: CMakeLists.txt
test/: CMakeLists.txt  code_generator.py  code_generator_test.py  foo_test.cpp  function_generator.py  generateExpressionTests.py  generate_expression_tests.py  generate_prim_sig_tests.py  sig_utils.py  signature_parser.py  signature_parser_test.py  statement_types.py  statement_types_test.py  test_varmat_signatures.py  tests0_test.cpp  tmp_test.cpp  ttt.cpp  varmat_compatibility.py  varmat_compatibility_summary.py  varmat_compatibility_summary_test.py  varmat_compatibility_test.py
test/benchmark/: benchmark.py
test/expressions/: expression_test_helpers.hpp  generate.py  generateExpressionTests.py  stan_math_sigs_exceptions.expected  test_expression_testing_framework.py  tests0_test.cpp
test/prob/: CMakeLists.txt  bernoulli_1_test.cpp  dummy_precompile_target.cpp  exp_mod_normal_1_test.cpp  exp_mod_normal_2_test.cpp  exp_mod_normal_3_test.cpp  exp_mod_normal_4_test.cpp  exp_mod_normal_5_test.cpp  exp_mod_normal_6_test.cpp  exp_mod_normal_7_test.cpp  exp_mod_normal_8_test.cpp  exp_mod_normal_9_test.cpp  gen.py  gen_test_header.hpp  generate_tests.cpp  generated_pch.hpp  getDependencies.py  normal_sufficient_1_test.cpp  normal_sufficient_2_test.cpp  normal_sufficient_3_test.cpp  normal_sufficient_4_test.cpp  normal_sufficient_5_test.cpp  normal_sufficient_6_test.cpp  normal_sufficient_7_test.cpp  pareto_type_2_1_test.cpp  pareto_type_2_2_test.cpp  pareto_type_2_3_test.cpp  pareto_type_2_4_test.cpp  pareto_type_2_5_test.cpp  pareto_type_2_6_test.cpp  pareto_type_2_7_test.cpp  pareto_type_2_8_test.cpp  pareto_type_2_9_test.cpp  skew_normal_1_test.cpp  skew_normal_2_test.cpp  skew_normal_3_test.cpp  skew_normal_4_test.cpp  skew_normal_5_test.cpp  skew_normal_6_test.cpp  skew_normal_7_test.cpp  (+29 more)
test/prob/args/: arg_generated_ffv_int_int_int_int_pch.hpp  arg_generated_ffv_int_int_real_pch.hpp  arg_generated_ffv_int_int_real_real_pch.hpp  arg_generated_ffv_int_real_pch.hpp  arg_generated_ffv_int_real_real_pch.hpp  arg_generated_ffv_real_pch.hpp  arg_generated_ffv_real_real_int_real_real_pch.hpp  arg_generated_ffv_real_real_pch.hpp  arg_generated_ffv_real_real_real_pch.hpp  arg_generated_ffv_real_real_real_real_pch.hpp  arg_generated_ffv_real_real_real_real_real_pch.hpp  arg_generated_v_int_int_int_int_pch.hpp  arg_generated_v_int_int_int_pch.hpp  arg_generated_v_int_int_real_pch.hpp  arg_generated_v_int_int_real_real_pch.hpp  arg_generated_v_int_real_pch.hpp  arg_generated_v_int_real_real_pch.hpp  arg_generated_v_real_pch.hpp  arg_generated_v_real_real_int_real_real_pch.hpp  arg_generated_v_real_real_pch.hpp  arg_generated_v_real_real_real_pch.hpp  arg_generated_v_real_real_real_real_pch.hpp  arg_generated_v_real_real_real_real_real_pch.hpp  arg_generated_vv_int_int_real_pch.hpp  arg_generated_vv_int_int_real_real_pch.hpp  arg_generated_vv_int_real_pch.hpp  arg_generated_vv_int_real_real_pch.hpp  arg_generated_vv_real_pch.hpp  arg_generated_vv_real_real_int_real_real_pch.hpp  arg_generated_vv_real_real_pch.hpp  (+3 more)
test/unit/: CMakeLists.txt  math_c11_test.cpp  math_c1y_test.cpp  math_include_test.cpp  multiple_translation_units1.cpp  multiple_translation_units2.cpp  multiple_translation_units_test.cpp  openMP_test.cpp  pretty_print_types.hpp  unit_pch.cpp  util.hpp
(+107856 files in other folders)
